# Go1_why

gazebo_docker/: Dockerfile  README.md
src/Go1_cpp/: CMakeLists.txt  package.xml
src/Go1_cpp/config/: gazebo_go1_mpc.yaml  gazebo_go1_qp.yaml
src/Go1_cpp/launch/: go1_ctrl.launch
src/Go1_cpp/src/: ConvexMpc.h  GazeboGo1ROS.cpp  GazeboGo1ROS.h  Go1ControlStates.h  Go1FilterEKF.cpp  Go1FilterEKF.h  Go1HardwareROS.h  Go1RobotControl.cpp  Go1RobotControl.h  MainGazebo.cpp
src/Go1_cpp/src/legKinematics/: Go1Kinematics.cpp  Go1Kinematics.h  README.md
src/Go1_cpp/src/utils/: Utils.cpp  Utils.h  filter.hpp
